--- a/app/src/main/res/layouts/FragmentLayout/layout/dialog_challenge_card.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/dialog_challenge_card.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
-            android:text="Mobile Call"
+            android:text="@string/mobile_call"
             android:layout_marginTop="10dp" />
 
         <Button
