--- a/app/src/main/res/layouts/FragmentLayout/layout/goal_type.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/goal_type.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="What's your goal?"
+        android:text="@string/goal_text"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,7 +56,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="Be Healtier"
+                android:text="@string/be_healty"
                 android:textSize="30sp" />
 
             <TextView
@@ -64,7 +64,7 @@
                 android:layout_height="20dp"
                 android:layout_margin="5dp"
                 android:gravity="center"
-                android:text="Eat and train for optimum health"
+                android:text="@string/first_goal"
                 android:textSize="15sp" />
         </LinearLayout>
 
@@ -86,7 +86,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="Lose Weight"
+                android:text="@string/lose_weight"
                 android:textSize="30sp" />
 
             <TextView
@@ -94,7 +94,7 @@
                 android:layout_height="20dp"
                 android:layout_margin="5dp"
                 android:gravity="center"
-                android:text="Get leaner and increase your stamina"
+                android:text="@string/second_goal"
                 android:textSize="15sp" />
         </LinearLayout>
 
@@ -116,7 +116,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="Gain Weight"
+                android:text="@string/gain_weight"
                 android:textSize="30sp" />
 
             <TextView
@@ -124,7 +124,7 @@
                 android:layout_height="20dp"
                 android:layout_margin="5dp"
                 android:gravity="center"
-                android:text="Build muscle strength"
+                android:text="@string/third_goal"
                 android:textSize="15sp" />
         </LinearLayout>
 
