--- a/app/src/main/res/layouts/ActivityLayout/layout/activity_onboarding.xml
+++ b/app/src/main/res/layouts/ActivityLayout/layout/activity_onboarding.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:text="Back"
+        android:text="@string/back_button"
         android:layout_margin="10dp"
         android:background="@color/transparent_white"
         android:visibility="invisible"/>
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:text="Next"
+        android:text="@string/next_button"
         android:layout_margin="10dp"
         android:background="@color/transparent_white"/>
 
