--- a/app/src/main/res/layouts/ActivityLayout/layout/activity_signup.xml
+++ b/app/src/main/res/layouts/ActivityLayout/layout/activity_signup.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/three_margin"
                 android:layout_marginRight="@dimen/three_margin"
-                android:hint="Ad"
+                android:hint="@string/name_text"
                 android:inputType="textCapWords" />
 
             <!--  SurName Label -->
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/three_margin"
                 android:layout_marginRight="@dimen/three_margin"
-                android:hint="Soyad"
+                android:hint="@string/surname_text"
                 android:inputType="textCapWords" />
 
             <!-- Email Label -->
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/three_margin"
                 android:layout_marginRight="@dimen/three_margin"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress" />
 
             <!-- Password Label -->
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/three_margin"
                 android:layout_marginRight="@dimen/three_margin"
-                android:hint="Şifre"
+                android:hint="@string/password"
                 android:inputType="textPassword" />
 
             <!-- Signup Button -->
@@ -87,7 +87,7 @@
                 android:layout_marginRight="@dimen/four_margin"
                 android:layout_marginTop="@dimen/four_margin"
                 android:padding="12dp"
-                android:text="Hesap Oluştur" />
+                android:text="@string/create_account" />
 
             <TextView
                 android:id="@+id/link_login"
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/three_margin"
                 android:gravity="center"
-                android:text="Zaten üye misiniz? Giriş yap"
+                android:text="@string/member_message"
                 android:textSize="12dip" />
 
         </LinearLayout>
