--- a/app/src/main/res/layouts/CardViews/layout/card_running_view.xml
+++ b/app/src/main/res/layouts/CardViews/layout/card_running_view.xml
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="mins"
+                android:text="@string/mins_text"
                 android:textSize="10sp"
                 android:textColor="@color/materail_green" />
         </LinearLayout>
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Running"
+            android:text="@string/running_text"
             android:textSize="10sp"
             android:layout_marginBottom="5dp" />
 
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="27dp"
             android:gravity="center"
-            android:text="START"
+            android:text="@string/start_button"
             android:background="@drawable/button_border_green" />
 
     </LinearLayout>
