--- a/app/src/main/res/layouts/CardViews/layout/card_stack_view.xml
+++ b/app/src/main/res/layouts/CardViews/layout/card_stack_view.xml
@@ -17,7 +17,7 @@
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="2"
-        android:text="Adım Sayar"
+        android:text="@string/step_counter"
         android:textColor="@color/black"
         android:textSize="14sp" />
 
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Günlük Adım"
+            android:text="@string/daily_step"
             android:textSize="20sp" />
 
         <LinearLayout
@@ -88,44 +88,5 @@
         app:apsv_sweep_angle="270"
         app:apsv_text_color="#fff"
         app:apsv_typeface="fonts/agency.ttf" />
-    <!--<LinearLayout-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:orientation="horizontal"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:layout_marginLeft="10dp"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:layout_gravity="bottom"-->
-    <!--android:weightSum="3"-->
-    <!--android:clickable="true">-->
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="15dp"-->
-    <!--android:text="Kalori"-->
-    <!--android:textSize="15sp"-->
-    <!--android:layout_gravity="left"-->
-    <!--android:layout_weight="1"-->
-    <!--android:gravity="center"/>-->
-    <!---->
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="15dp"-->
-    <!--android:text="Aktif Süre"-->
-    <!--android:textSize="15sp"-->
-    <!--android:layout_gravity="top|center"-->
-    <!--android:layout_weight="1"-->
-    <!--android:gravity="center"/>-->
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="15dp"-->
-    <!--android:text="Kilometre"-->
-    <!--android:textSize="15sp"-->
-    <!--android:layout_gravity="right"-->
-    <!--android:layout_weight="1"-->
-    <!--android:gravity="center"/>-->
-    <!--</LinearLayout>-->
 </android.support.v7.widget.CardView>
 
