--- a/app/src/main/res/layouts/CardViews/layout/card_weight_view.xml
+++ b/app/src/main/res/layouts/CardViews/layout/card_weight_view.xml
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Weight"
+            android:text="@string/weight_text"
             android:textSize="10sp"
             android:layout_marginBottom="5dp" />
 
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="27dp"
             android:gravity="center"
-            android:text="Go"
+            android:text="@string/go_button"
             android:background="@drawable/button_border_red" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
