--- a/app/src/main/res/layouts/CardViews/layout/item_list_friends.xml
+++ b/app/src/main/res/layouts/CardViews/layout/item_list_friends.xml
@@ -28,7 +28,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textStyle="bold"
-         android:text="Name"
+         android:text="@string/name"
          android:id="@+id/name"
          android:layout_weight="1"/>
 
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:text="GoalType"
+        android:text="@string/goal_type"
         android:id="@+id/goal_type"
         android:layout_weight="1"/>
     </LinearLayout>
