--- a/app/src/main/res/layouts/FragmentLayout/layout/sex_type.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/sex_type.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Hi !"
+        android:text="@string/hi_text"
         android:textSize="45sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Let's start with the basics"
+        android:text="@string/lets_start"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textAllCaps="false"
-        android:text="Male"/>
+        android:text="@string/male"/>
     <Button
         android:id="@+id/female"
         android:layout_width="wrap_content"
@@ -59,6 +59,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textAllCaps="false"
-        android:text="Female"/>
+        android:text="@string/female"/>
 
 </android.support.constraint.ConstraintLayout>
