--- a/app/src/main/res/layouts/FragmentLayout/layout/activity_add_new_challenge.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/activity_add_new_challenge.xml
@@ -39,7 +39,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:hint="Challenge Name"
             android:textColorHint="@color/black"/>
 
@@ -270,6 +270,7 @@
 
 
         <Button
+            android:id="@+id/start"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:text="Start"
