--- a/app/src/main/res/layouts/FragmentLayout/layout/item_challenge_cards.xml
+++ b/app/src/main/res/layouts/FragmentLayout/layout/item_challenge_cards.xml
@@ -40,41 +40,31 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/challenge_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/challenge_name"
                     android:layout_marginBottom="6dp"/>
                 <TextView
+                    android:id="@+id/challenge_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/challenge_type"
                     android:layout_marginBottom="6dp"/>
                 <TextView
+                    android:id="@+id/start_end_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/challenge_dates"
                     android:layout_marginBottom="6dp"/>
                 <TextView
+                    android:id="@+id/number_people"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/challenge_number"
                     android:layout_marginBottom="6dp"/>
 
             </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/text"
-                android:textColor="@color/colorPrimary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/image"
-                android:layout_toEndOf="@+id/image"
-                android:padding="10dp"
-                android:text="@string/app_name" />
-
 
         </RelativeLayout>
 
